--- a/WindowExplorer/Sources/Controllers/RecordViewController/Views/MediaItemView.xib
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Views/MediaItemView.xib
@@ -8,6 +8,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="MediaItemView" customModule="WindowExplorer" customModuleProvider="target">
             <connections>
                 <outlet property="mediaImageView" destination="qFx-mJ-ye3" id="wSN-K9-1ET"/>
+                <outlet property="titleLabelBackgroundHeight" destination="zWD-jR-AWQ" id="rQf-u9-4Yx"/>
                 <outlet property="titleLabelBackgroundView" destination="a5X-zo-zhB" id="HTS-rz-czM"/>
                 <outlet property="titleLabelBackgroundWidth" destination="3Oz-H8-hiB" id="pel-XH-wFD"/>
                 <outlet property="videoIconImageView" destination="MCi-Na-Q3u" id="wr2-ky-Npx"/>
@@ -24,9 +25,9 @@
                     <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
                     <subviews>
                         <customView hidden="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a5X-zo-zhB">
-                            <rect key="frame" x="235" y="252" width="10" height="20"/>
+                            <rect key="frame" x="190" y="252" width="100" height="20"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="10" id="3Oz-H8-hiB"/>
+                                <constraint firstAttribute="width" priority="250" constant="100" id="3Oz-H8-hiB"/>
                                 <constraint firstAttribute="height" constant="20" id="zWD-jR-AWQ"/>
                             </constraints>
                         </customView>
@@ -34,7 +35,7 @@
                     <constraints>
                         <constraint firstItem="a5X-zo-zhB" firstAttribute="centerX" secondItem="qFx-mJ-ye3" secondAttribute="centerX" id="Hfp-Vr-D4m"/>
                         <constraint firstItem="a5X-zo-zhB" firstAttribute="top" secondItem="qFx-mJ-ye3" secondAttribute="top" id="Q5M-ia-Ojb"/>
-                        <constraint firstItem="a5X-zo-zhB" firstAttribute="width" relation="lessThanOrEqual" secondItem="qFx-mJ-ye3" secondAttribute="width" id="ycT-Yp-fM7"/>
+                        <constraint firstItem="a5X-zo-zhB" firstAttribute="width" relation="lessThanOrEqual" secondItem="qFx-mJ-ye3" secondAttribute="width" constant="-80" id="ycT-Yp-fM7"/>
                     </constraints>
                 </customView>
                 <imageView hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MCi-Na-Q3u">
