Adding background timer for momentum of gestures. (#202)
* Refactored some WindowManager logic.

* Removed unnecessary code.

* Added BackgroundTimer class.

* Added qos queue to the background timer.

* Added Background Timer to record view controller.

* Refactored animation logic.

* Added Control View for launching and closing application.

* Fixed shadow in master control view.

* Moving spawning and killing logic to Master Controller.

* Added terminated image to master control view.

* Using NSRunningApplication to spawn sub apps.

* Added App Icons for WindowExplorer.

* Added AppIcon for MapExplorer project.

* Properly loading index of screen, refactored transition logic.

* Added transition function to ImageView, fixed out of bounds crash.

* Added Dispatch Timer to PinchGesture.

--- a/WindowExplorer/Sources/Controllers/RecordViewController/Views/RelatedItemView.xib
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Views/RelatedItemView.xib
@@ -15,7 +15,7 @@
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="YQD-s2-RG2" userLabel="Content View">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="80"/>
                     <subviews>
-                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="GPP-LU-OnZ" customClass="AspectFillImage" customModule="WindowExplorer" customModuleProvider="target">
+                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="GPP-LU-OnZ" customClass="ImageView" customModule="WindowExplorer" customModuleProvider="target">
                             <rect key="frame" x="10" y="10" width="60" height="60"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="M5H-B8-xpK"/>
