--- a/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
@@ -12,23 +12,23 @@
             <objects>
                 <viewController id="7oi-8d-QFD" customClass="RecordViewController" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="i2Z-RE-f6z">
-                        <rect key="frame" x="0.0" y="0.0" width="672" height="640"/>
+                        <rect key="frame" x="0.0" y="0.0" width="732" height="640"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="600" borderType="none" autohidesScrollers="YES" horizontalLineScroll="21" horizontalPageScroll="10" verticalLineScroll="21" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="vNQ-tt-E3O" userLabel="Scroll View">
-                                <rect key="frame" x="424" y="0.0" width="240" height="552"/>
+                            <scrollView placeholderIntrinsicWidth="300" placeholderIntrinsicHeight="600" borderType="none" autohidesScrollers="YES" horizontalLineScroll="21" horizontalPageScroll="10" verticalLineScroll="21" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="vNQ-tt-E3O" userLabel="Scroll View">
+                                <rect key="frame" x="424" y="0.0" width="300" height="544"/>
                                 <clipView key="contentView" drawsBackground="NO" id="c7X-hu-wk8">
-                                    <rect key="frame" x="0.0" y="0.0" width="240" height="552"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="544"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="cKY-nL-NPV">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="552"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="544"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="0.0" height="4"/>
                                             <color key="backgroundColor" name="scrollBarColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn identifier="" width="240" minWidth="240" maxWidth="240" id="2YF-w5-eOk">
+                                                <tableColumn identifier="" width="300" minWidth="300" maxWidth="300" id="2YF-w5-eOk">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -42,11 +42,11 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="1Ps-9a-Xs9">
-                                                            <rect key="frame" x="0.0" y="2" width="240" height="17"/>
+                                                            <rect key="frame" x="0.0" y="2" width="300" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lXZ-sK-cp1">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="2RK-zc-U1L">
                                                                         <font key="font" metaFont="system"/>
@@ -71,7 +71,7 @@
                                     <color key="backgroundColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="47H-Ga-qEq"/>
+                                    <constraint firstAttribute="width" constant="300" id="47H-Ga-qEq"/>
                                 </constraints>
                                 <edgeInsets key="contentInsets" left="0.0" right="0.0" top="0.0" bottom="0.0"/>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="z3z-4g-sSh">
@@ -84,18 +84,18 @@
                                 </scroller>
                             </scrollView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="pwG-Vb-Cze" customClass="RecordTypeSelectionView" customModule="WindowExplorer" customModuleProvider="target">
-                                <rect key="frame" x="424" y="564" width="240" height="24"/>
+                                <rect key="frame" x="424" y="552" width="300" height="40"/>
                                 <subviews>
-                                    <stackView orientation="horizontal" alignment="centerY" spacing="32" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YiS-is-wdH">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="24"/>
+                                    <stackView orientation="horizontal" alignment="centerY" spacing="16" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" placeholderIntrinsicWidth="300" placeholderIntrinsicHeight="40" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YiS-is-wdH">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="40"/>
                                     </stackView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="YiS-is-wdH" secondAttribute="bottom" id="Enu-10-5OJ"/>
                                     <constraint firstItem="YiS-is-wdH" firstAttribute="leading" secondItem="pwG-Vb-Cze" secondAttribute="leading" id="VVT-t2-cZt"/>
                                     <constraint firstItem="YiS-is-wdH" firstAttribute="top" secondItem="pwG-Vb-Cze" secondAttribute="top" id="bYG-Ba-V7P"/>
-                                    <constraint firstAttribute="height" constant="24" id="c8L-NK-Au5"/>
-                                    <constraint firstAttribute="trailing" secondItem="YiS-is-wdH" secondAttribute="trailing" id="ku4-J0-nNG"/>
+                                    <constraint firstAttribute="height" constant="40" id="c8L-NK-Au5"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="YiS-is-wdH" secondAttribute="trailing" id="ku4-J0-nNG"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="stackview" destination="YiS-is-wdH" id="5uE-Y7-YlZ"/>
@@ -199,7 +199,7 @@
                                 </constraints>
                             </customView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="4OT-12-Vbx">
-                                <rect key="frame" x="0.0" y="600" width="599" height="40"/>
+                                <rect key="frame" x="0.0" y="600" width="659" height="40"/>
                                 <subviews>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="uhV-2F-c5f">
                                         <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -223,7 +223,7 @@
                                         </constraints>
                                     </customView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="ng9-0N-mwq">
-                                        <rect key="frame" x="559" y="0.0" width="40" height="40"/>
+                                        <rect key="frame" x="619" y="0.0" width="40" height="40"/>
                                         <subviews>
                                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyM-5a-uST">
                                                 <rect key="frame" x="10" y="10" width="20" height="20"/>
@@ -242,14 +242,22 @@
                                         </constraints>
                                     </customView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="e2P-UJ-8Oj">
-                                        <rect key="frame" x="0.0" y="0.0" width="599" height="1"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="659" height="1"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="Z2i-R5-Prf"/>
                                         </constraints>
                                     </customView>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="79v-3B-4jX">
-                                        <rect key="frame" x="427" y="11" width="126" height="17"/>
-                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="RELATED RECORDS" id="4Xq-x9-DWL">
+                                        <rect key="frame" x="422" y="11" width="61" height="17"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="RELATED" id="4Xq-x9-DWL">
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dT1-7n-nU7">
+                                        <rect key="frame" x="483" y="11" width="66" height="17"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="RECORDS" id="nbV-5b-8hO">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -258,16 +266,18 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="e2P-UJ-8Oj" firstAttribute="width" secondItem="4OT-12-Vbx" secondAttribute="width" id="1XS-Ym-Uu6"/>
+                                    <constraint firstItem="dT1-7n-nU7" firstAttribute="centerY" secondItem="79v-3B-4jX" secondAttribute="centerY" id="3Ue-0T-4oH"/>
                                     <constraint firstItem="uhV-2F-c5f" firstAttribute="top" secondItem="4OT-12-Vbx" secondAttribute="top" id="57s-xN-lnj"/>
                                     <constraint firstAttribute="bottom" secondItem="e2P-UJ-8Oj" secondAttribute="bottom" id="5ED-UG-X14"/>
                                     <constraint firstItem="uhV-2F-c5f" firstAttribute="leading" secondItem="4OT-12-Vbx" secondAttribute="leading" id="FLO-X8-VYx"/>
                                     <constraint firstItem="ng9-0N-mwq" firstAttribute="top" secondItem="4OT-12-Vbx" secondAttribute="top" id="Iy7-uc-xav"/>
                                     <constraint firstItem="79v-3B-4jX" firstAttribute="centerY" secondItem="4OT-12-Vbx" secondAttribute="centerY" id="IyY-Qu-1cr"/>
                                     <constraint firstAttribute="trailing" secondItem="ng9-0N-mwq" secondAttribute="trailing" id="NsW-mC-M2L"/>
-                                    <constraint firstItem="ng9-0N-mwq" firstAttribute="leading" secondItem="79v-3B-4jX" secondAttribute="trailing" constant="8" id="PMY-jJ-ahb"/>
+                                    <constraint firstItem="dT1-7n-nU7" firstAttribute="leading" secondItem="79v-3B-4jX" secondAttribute="trailing" constant="4" id="Qm2-wO-ncd"/>
                                     <constraint firstItem="e2P-UJ-8Oj" firstAttribute="leading" secondItem="4OT-12-Vbx" secondAttribute="leading" id="gLs-Wr-wMT"/>
+                                    <constraint firstItem="ng9-0N-mwq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="dT1-7n-nU7" secondAttribute="trailing" constant="8" id="ntH-WW-wVE"/>
                                     <constraint firstAttribute="height" constant="40" id="r8Y-aK-C3X"/>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="600" id="syG-eS-gdc"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="416" id="syG-eS-gdc"/>
                                 </constraints>
                             </customView>
                         </subviews>
@@ -276,14 +286,14 @@
                             <constraint firstItem="83q-cx-wcX" firstAttribute="top" secondItem="i2Z-RE-f6z" secondAttribute="top" id="9fe-gB-ueE"/>
                             <constraint firstAttribute="trailing" secondItem="vNQ-tt-E3O" secondAttribute="trailing" constant="8" id="Aii-Q7-tU9"/>
                             <constraint firstItem="4OT-12-Vbx" firstAttribute="trailing" secondItem="vNQ-tt-E3O" secondAttribute="trailing" priority="250" constant="-65" id="G6p-yg-Vzl"/>
-                            <constraint firstItem="vNQ-tt-E3O" firstAttribute="top" secondItem="pwG-Vb-Cze" secondAttribute="bottom" constant="12" id="J0q-Y4-EnC"/>
+                            <constraint firstItem="vNQ-tt-E3O" firstAttribute="top" secondItem="pwG-Vb-Cze" secondAttribute="bottom" constant="8" id="J0q-Y4-EnC"/>
                             <constraint firstItem="pwG-Vb-Cze" firstAttribute="width" secondItem="cKY-nL-NPV" secondAttribute="width" id="JS4-G7-cUR"/>
                             <constraint firstItem="83q-cx-wcX" firstAttribute="leading" secondItem="i2Z-RE-f6z" secondAttribute="leading" id="Kp5-K5-vf4"/>
                             <constraint firstItem="4OT-12-Vbx" firstAttribute="leading" secondItem="i2Z-RE-f6z" secondAttribute="leading" id="MFB-Uj-PLT"/>
-                            <constraint firstItem="4OT-12-Vbx" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="83q-cx-wcX" secondAttribute="trailing" id="XhA-21-17B"/>
                             <constraint firstAttribute="bottom" secondItem="83q-cx-wcX" secondAttribute="bottom" id="Y1m-b0-aom"/>
-                            <constraint firstItem="vNQ-tt-E3O" firstAttribute="top" secondItem="4OT-12-Vbx" secondAttribute="bottom" constant="48" id="cmY-o5-0ik"/>
-                            <constraint firstItem="pwG-Vb-Cze" firstAttribute="top" secondItem="4OT-12-Vbx" secondAttribute="bottom" constant="12" id="hqk-4r-jGZ"/>
+                            <constraint firstItem="vNQ-tt-E3O" firstAttribute="top" secondItem="4OT-12-Vbx" secondAttribute="bottom" constant="56" id="cmY-o5-0ik"/>
+                            <constraint firstItem="79v-3B-4jX" firstAttribute="leading" secondItem="YiS-is-wdH" secondAttribute="leading" id="dtQ-0y-xMN"/>
+                            <constraint firstItem="pwG-Vb-Cze" firstAttribute="top" secondItem="4OT-12-Vbx" secondAttribute="bottom" constant="8" id="hqk-4r-jGZ"/>
                             <constraint firstItem="4OT-12-Vbx" firstAttribute="top" secondItem="i2Z-RE-f6z" secondAttribute="top" id="kRH-u9-X9o"/>
                             <constraint firstAttribute="bottom" secondItem="vNQ-tt-E3O" secondAttribute="bottom" id="tiB-iW-BCV"/>
                         </constraints>
@@ -297,6 +307,7 @@
                         <outlet property="recordTypeSelectionView" destination="pwG-Vb-Cze" id="Yg5-e3-d8b"/>
                         <outlet property="relatedItemsView" destination="cKY-nL-NPV" id="26r-gU-lSa"/>
                         <outlet property="relatedRecordsLabel" destination="79v-3B-4jX" id="egP-qv-zjo"/>
+                        <outlet property="relatedRecordsTypeLabel" destination="dT1-7n-nU7" id="nGW-5s-HoU"/>
                         <outlet property="stackClipView" destination="CkM-eN-t5N" id="Ycr-Y2-xGv"/>
                         <outlet property="stackView" destination="RgY-ah-SAv" id="N4b-iD-145"/>
                         <outlet property="toggleRelatedItemsArea" destination="ng9-0N-mwq" id="Lqz-na-MLi"/>
