--- a/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
@@ -71,22 +71,23 @@
                                 <rect key="frame" x="0.0" y="0.0" width="416" height="640"/>
                                 <subviews>
                                     <scrollView verticalCompressionResistancePriority="250" placeholderIntrinsicWidth="380" placeholderIntrinsicHeight="300" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBg-bp-lkB" customClass="FadingScrollView" customModule="WindowExplorer" customModuleProvider="target">
-                                        <rect key="frame" x="18" y="10" width="380" height="310"/>
+                                        <rect key="frame" x="0.0" y="10" width="414" height="310"/>
                                         <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="CkM-eN-t5N" customClass="FlippedClipView" customModule="WindowExplorer" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="380" height="310"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="310"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <view placeholderIntrinsicWidth="380" placeholderIntrinsicHeight="310" translatesAutoresizingMaskIntoConstraints="NO" id="Bws-Xv-6hl">
-                                                    <rect key="frame" x="0.0" y="0.0" width="380" height="310"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="310"/>
                                                     <subviews>
                                                         <stackView distribution="equalSpacing" orientation="vertical" alignment="leading" spacing="5" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" placeholderIntrinsicWidth="404" placeholderIntrinsicHeight="310" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RgY-ah-SAv">
-                                                            <rect key="frame" x="0.0" y="0.0" width="380" height="310"/>
+                                                            <rect key="frame" x="18" y="0.0" width="378" height="310"/>
                                                         </stackView>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="bottom" secondItem="RgY-ah-SAv" secondAttribute="bottom" id="JOA-OM-fl4"/>
                                                         <constraint firstItem="RgY-ah-SAv" firstAttribute="top" secondItem="Bws-Xv-6hl" secondAttribute="top" id="fk8-fy-WkI"/>
-                                                        <constraint firstItem="RgY-ah-SAv" firstAttribute="leading" secondItem="Bws-Xv-6hl" secondAttribute="leading" id="x6m-kL-q2x"/>
+                                                        <constraint firstAttribute="trailing" secondItem="RgY-ah-SAv" secondAttribute="trailing" constant="18" id="hGQ-8M-xcw"/>
+                                                        <constraint firstItem="RgY-ah-SAv" firstAttribute="leading" secondItem="Bws-Xv-6hl" secondAttribute="leading" constant="18" id="x6m-kL-q2x"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -94,18 +95,18 @@
                                                 <constraint firstAttribute="trailing" secondItem="Bws-Xv-6hl" secondAttribute="trailing" id="0Fg-cJ-oSQ"/>
                                                 <constraint firstItem="Bws-Xv-6hl" firstAttribute="leading" secondItem="CkM-eN-t5N" secondAttribute="leading" id="DCI-zi-xnf"/>
                                             </constraints>
+                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </clipView>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="310" id="Gwd-YK-hUg"/>
                                             <constraint firstItem="RgY-ah-SAv" firstAttribute="top" secondItem="FBg-bp-lkB" secondAttribute="top" id="ZOD-AQ-YIW"/>
-                                            <constraint firstItem="RgY-ah-SAv" firstAttribute="width" secondItem="FBg-bp-lkB" secondAttribute="width" id="sbk-ad-9k7"/>
                                         </constraints>
                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="yG8-DL-w2k">
                                             <rect key="frame" x="-100" y="-100" width="380" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
-                                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="WJp-14-XQg">
-                                            <rect key="frame" x="364" y="0.0" width="16" height="310"/>
+                                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="0.5" horizontal="NO" id="WJp-14-XQg">
+                                            <rect key="frame" x="398" y="0.0" width="16" height="310"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                     </scrollView>
@@ -142,7 +143,7 @@
                                             <constraint firstAttribute="width" secondItem="ufY-Kg-vBR" secondAttribute="height" multiplier="1.63:1" id="kgg-HG-bJk"/>
                                         </constraints>
                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="yUc-lw-Iqm">
-                                            <rect key="frame" x="0.0" y="188" width="408" height="16"/>
+                                            <rect key="frame" x="0.0" y="239" width="416" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="JyZ-2O-BFj">
@@ -153,12 +154,12 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="FBg-bp-lkB" secondAttribute="bottom" constant="10" id="1w4-2t-1qL"/>
-                                    <constraint firstAttribute="trailing" secondItem="FBg-bp-lkB" secondAttribute="trailing" constant="18" id="3e3-h1-L7H"/>
+                                    <constraint firstAttribute="trailing" secondItem="FBg-bp-lkB" secondAttribute="trailing" constant="2" id="3e3-h1-L7H"/>
                                     <constraint firstItem="FBg-bp-lkB" firstAttribute="top" secondItem="Eaz-7m-IDm" secondAttribute="bottom" constant="25" id="8vh-Mt-Z9V"/>
                                     <constraint firstItem="ufY-Kg-vBR" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" id="CBg-hb-EdH"/>
                                     <constraint firstItem="Zeo-g9-VHC" firstAttribute="centerY" secondItem="ufY-Kg-vBR" secondAttribute="centerY" id="EcY-KO-d8G"/>
                                     <constraint firstItem="Zeo-g9-VHC" firstAttribute="centerX" secondItem="ufY-Kg-vBR" secondAttribute="centerX" id="e06-73-OD5"/>
-                                    <constraint firstItem="FBg-bp-lkB" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" constant="18" id="fiA-kL-6Ij"/>
+                                    <constraint firstItem="FBg-bp-lkB" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" id="fiA-kL-6Ij"/>
                                     <constraint firstAttribute="width" constant="416" id="gCO-Bx-Eu3"/>
                                     <constraint firstAttribute="trailing" secondItem="ufY-Kg-vBR" secondAttribute="trailing" id="isU-1a-I8R"/>
                                     <constraint firstItem="ufY-Kg-vBR" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="40" id="ktu-Si-a2l"/>
