Made a BaseViewController class, created SearchViewController. (#240)
* Added search view controller with a primary collection view.

* Added window drag area to the SearchVC.

* Moved title attributes into style class. Stylized search view controller.

* Added BaseViewController, extracted from mediaviewcontroller.

* Made search controller inherit from base view controller.

* Made RecordViewController inherit from BaseViewController.

* removed function.

--- a/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
@@ -299,9 +299,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="closeWindowTapArea" destination="uhV-2F-c5f" id="X44-7A-E7k"/>
                         <outlet property="collectionClipView" destination="IhY-hb-dfg" id="T4r-mC-1YX"/>
                         <outlet property="detailView" destination="83q-cx-wcX" id="pb8-ex-weM"/>
+                        <outlet property="dismissButton" destination="uhV-2F-c5f" id="fji-JA-ClI"/>
                         <outlet property="mediaView" destination="Eaz-7m-IDm" id="eav-Zv-2bd"/>
                         <outlet property="placeHolderImage" destination="Zeo-g9-VHC" id="YQF-Yz-VuJ"/>
                         <outlet property="recordTypeSelectionView" destination="pwG-Vb-Cze" id="Yg5-e3-d8b"/>
